# xNVMe

./: Makefile  meson.build  meson_options.txt
.github/workflows/: freebsd-build.yml  linux-binaries-test.yml  linux-build-test.yml  windows-build-test.yml
docs/capis/: xnvme.rst
docs/getting_started/: index.rst
include/: libxnvme.h  libxnvme_nvm.h  libxnvme_spec.h  libxnvmec.h  xnvme_be.h  xnvme_be_nosys.h
lib/: meson.build  xnvme_be.c  xnvme_be_fbsd_nvme.c  xnvme_be_linux_async_libaio.c  xnvme_be_linux_async_liburing.c  xnvme_be_linux_async_ucmd.c  xnvme_be_linux_block.c  xnvme_be_linux_nvme.c  xnvme_be_nosys.c  xnvme_be_posix_async_aio.c  xnvme_be_posix_async_emu.c  xnvme_be_posix_async_nil.c  xnvme_be_posix_async_thrpool.c  xnvme_be_posix_sync.c  xnvme_be_ramdisk_admin.c  xnvme_be_ramdisk_dev.c  xnvme_be_ramdisk_sync.c  xnvme_be_spdk_async.c  xnvme_be_spdk_sync.c  xnvme_cmd.c  xnvme_nvm.c  xnvmec.c
scripts/: debber.py  meson.build
scripts/pkgs/: alpine-3.12.0.txt  archlinux-20200306.txt  freebsd-13.txt  windows-2022.bat  windows-2022.txt
src/: meson.build
subprojects/packagefiles/fio/: meson.build
subprojects/packagefiles/spdk/: meson.build
tools/: meson.build  xnvme_file.c
tools/fio-engine/: meson.build  xnvme_fioe.c
